fix zoom stretch

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
 }
 
 .toggle {
-  width: 10%;
-  height: 5%;
+  width: 140px;
+  height: 40px;
   top:10%;
   left: 89%;
   position: absolute;
